Update and rename main.yml to main-h.yml

--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -35,4 +35,4 @@ jobs:
             TG_USER_ID: ${{ secrets.TG_USER_ID }}
 
           run: |
-            python3 ./main.py
+            python3 ./main-h.py
