--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -4,7 +4,7 @@ on:
   #push:
   schedule:
     # UTC time (国内 UTC+8)
-     - cron: '30 */2 * * *'
+     - cron: '30 4 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
