--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -10,7 +10,8 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    #runs-on: macos-latest
+    runs-on: macos-12
     #runs-on: macos-10.15
 
     steps:
