--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -17,10 +17,15 @@ jobs:
     steps:
         - name: 'Checkout codes'
           uses: actions/checkout@v2
-#         - name: 'Set up Python'
-#           uses: actions/setup-python@v2
-#           with:
-#             python-version: '3.9.10'
+        - name: 'Set up chromedriver'           
+        - uses: nanasess/setup-chromedriver@v1
+          with:
+    # Optional: do not specify to match Chrome's version
+            chromedriver-version: '100'
+        - run: |
+            export DISPLAY=:99
+            chromedriver --url-base=/wd/hub &
+            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
         - name: 'Install requirements'
           run: |
