--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
         - name: 'Checkout codes'
-        - uses: actions/checkout@v2
+          uses: actions/checkout@v2
         - name: 'Set up chromedriver'           
-        - uses: nanasess/setup-chromedriver@v1
+          uses: nanasess/setup-chromedriver@v1
           with:
     # Optional: do not specify to match Chrome's version
             chromedriver-version: '100'
