--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -17,15 +17,9 @@ jobs:
     steps:
         - name: 'Checkout codes'
           uses: actions/checkout@v2
-        - name: 'Set up chromedriver'           
-          uses: nanasess/setup-chromedriver@v1
-          with:
-    # Optional: do not specify to match Chrome's version
-            chromedriver-version: '100.0.4896.60'
-        - run: |
-            export DISPLAY=:99
-            chromedriver --url-base=/wd/hub &
-            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+        - name: 'Set up chrome version'           
+        - uses: browser-actions/setup-chrome@latest
+        - run: chrome --version
 
         - name: 'Install requirements'
           run: |
