--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -18,8 +18,8 @@ jobs:
         - name: 'Checkout codes'
           uses: actions/checkout@v2
         - name: 'Set up chrome version'           
-          uses: browser-actions/setup-chrome@latest
-          run: chrome --version
+        - uses: browser-actions/setup-chrome@latest
+        - run: chrome --version
           with:
             chrome-version: beta
 
