--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
         - name: 'Checkout codes'
           uses: actions/checkout@v2
-        - name: 'Set up chrome version'           
-        - uses: browser-actions/setup-chrome@latest
-        - run: chrome --version
-          with:
-            chrome-version: beta
+        - name: 'Update Chrome'           
+          run: |
+            sudo apt-get update
+            sudo apt-get --only-upgrade install google-chrome-stable
+            google-chrome --version
 
         - name: 'Install requirements'
           run: |
