--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -10,8 +10,8 @@ on:
 
 jobs:
   build:
-    #runs-on: macos-latest
-    runs-on: macos-10.15
+    runs-on: ubuntu-latest
+    #runs-on: macos-10.15
 
     steps:
         - name: 'Checkout codes'
