--- a/.github/workflows/main-w.yml
+++ b/.github/workflows/main-w.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-12
     #runs-on: macos-10.15
 
     steps:
@@ -18,9 +18,7 @@ jobs:
           uses: actions/checkout@v2
         - name: 'Update Chrome'           
           run: |
-            sudo apt-get update
-            sudo apt-get --only-upgrade install google-chrome-stable
-            google-chrome --version
+            brew cask reinstall google-chrome
 
         - name: 'Install requirements'
           run: |
