--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -11,15 +11,15 @@ on:
 jobs:
   build:
     #runs-on: macos-latest
-    runs-on: macos-10.15
+    runs-on: macos-12
 
     steps:
         - name: 'Checkout codes'
           uses: actions/checkout@v2
-#         - name: 'Set up Python'
-#           uses: actions/setup-python@v2
-#           with:
-#             python-version: '3.9.10'
+          
+        - name: 'Update Chrome'           
+          run: |
+            brew reinstall --cask google-chrome
 
         - name: 'Install requirements'
           run: |
