--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -4,7 +4,7 @@ on:
   #push:
   schedule:
     # UTC time (国内 UTC+8)
-     - cron: '30 4 */3 * *'
+     - cron: '30 4 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
