--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -26,7 +26,7 @@ jobs:
             pip3 install -r ./requirements.txt
             pip3 install undetected-chromedriver
             
-        - name: 'Working'
+        - name: 'Renew'
           env:
             USER_ID: ${{ secrets.USER_ID }}
             PASS_WD: ${{ secrets.PASS_WD }}
