--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -3,7 +3,7 @@ name: 'H-Extend'
 on:
   #push:
   schedule:
-    # UTC time (国内 UTC+8)
+    # UTC (国内 UTC+8)
      - cron: '30 20 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
