--- a/.github/workflows/main-h.yml
+++ b/.github/workflows/main-h.yml
@@ -25,7 +25,7 @@ jobs:
           run: |
             pip3 install -r ./requirements.txt
             pip3 install undetected-chromedriver
-            pip3 uninstall selenium
+            yes | pip3 uninstall selenium
             pip3 install selenium==4.2.0
             
         - name: 'Renew'
